[tool.poetry]
name = "image-processing-studio"
version = "0.1.0"
description = ""
authors = ["Alessandro Aguilar <alessandro.aguilar.chombo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.39.0"
opencv-python = "^4.10.0.84"
altair = {extras = ["all"], version = "^5.4.1"}
marimo = "^0.9.14"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
